Fix font rendering (again) on iOS 16.x

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,7 +19,7 @@
     fill: currentColor;
 }
 
-* {
+*, html {
     font-family: Inter, system-ui;
-    font-optical-sizing: 15;
+    font-variation-settings: "opsz" 15;
 }
